tests/error/if_exp_invalid_cond.gw
// [contains] Invalid type
null ? <<< 1 >>> : <<< 2 >>>;
